--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "googleapis": "^105.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
@@ -25,7 +26,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon src/app.ts",
+    "start": "nodemon src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.ts"
   },
