--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "googleapis": "^105.0.0",
+    "https": "^1.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "node-fetch": "^3.3.1",
